# sphere-set-approximation

./: .gitignore  CMakeLists.txt  README.md  bench.py  demo.sh  package.xml  rockerc.yaml  setup_tungsten.sh  sphere-set-approximation.deps.yaml
include/: sotv.hpp  sphere_set_approximate.hpp  sphere_set_approximator.hpp
include/manifold/: Model_OBJ.h
include/rtcore/: mesh.hpp  objmesh.hpp  sampler.hpp
include/sphere_set_approximate/: mesh_test.hpp  point_in_mesh.hpp  pointset.hpp  powell.hpp  sotv.hpp  sotv_debug.hpp  sov.hpp  sphere.hpp  sphere_set_approximate.hpp  util.hpp  visualize.hpp
report/: index.html
rtcore/: mesh.hpp  triangle.hpp
src/: main.cpp  sphere_set_approximator.cpp
src/manifold/: main_manifold.cpp
src/math/: matmath.cpp  vecmath.cpp
src/rtcore/: aabox.cpp  objmesh.cpp
src/sphere_set_approximate/: mesh_test.cpp  point_in_mesh.cpp  pointset.cpp  powell.cpp  sov.cpp  sphere.cpp  sphere_set_approximate.cpp  visualize.cpp
validation/: sov_test.hpp
